An attempt to solve carousel overflow issue

--- a/src/components/sliderStyles.css
+++ b/src/components/sliderStyles.css
@@ -66,6 +66,17 @@
 
 @media only screen and (max-width: 800px) {
 
+    .carousel-wrapper {
+        width: 100%;
+        max-width: 100vw !important;
+        overflow: hidden;
+        box-sizing: border-box;
+    }
+
+    .slick-slider {
+        width: 100% !important;
+    }
+
     .arrows-container {
         position: fixed;
         top: 50%;
