--- a/src/index.css
+++ b/src/index.css
@@ -136,6 +136,9 @@ p {
 
 @media only screen and (max-width: 800px) {
 
+    .main {
+        padding-left: 10px;
+    }
     .banner > * > h2 {
         font-size: 20px;
     }
@@ -446,7 +449,7 @@ p {
 @media only screen and (max-width: 800px) {
     
     .recipiespage {
-        margin-left: 0px;
+        margin-left: 10px;
         margin-right: 0px;
     }
     .recipe {
